--- a/config/bridget/customer-profile/serviceclaims.yml
+++ b/config/bridget/customer-profile/serviceclaims.yml
@@ -15,9 +15,9 @@ metadata:
 spec:
   name: db
   service:
-    apiVersion: sql.tanzu.vmware.com/v1
-    kind: Postgres
-    name: customer-profile-database
+    apiVersion: services.apps.tanzu.vmware.com/v1alpha1
+    kind: ResourceClaim
+    name: psql-bridget
   workload:
     apiVersion: serving.knative.dev/v1
     kind: Service
