--- a/config/bridget/customer-profile/apiDescriptor.yml
+++ b/config/bridget/customer-profile/apiDescriptor.yml
@@ -10,13 +10,14 @@ metadata:
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/language: java
     apps.tanzu.vmware.com/workload-type: web
+    pipeline-tag: customer-profile-test-pipeline
     app.kubernetes.io/component: run
     carto.run/workload-name: customer-profile
 spec:
   type: openapi
   description: awesomest
   system: maelarge
-  owner: castle
+  owner: maelarge
   location:
     path: /api-docs
     baseURL:
