--- a/config/bridget/customer-profile/delivery.yml
+++ b/config/bridget/customer-profile/delivery.yml
@@ -11,6 +11,7 @@ metadata:
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/language: java
     apps.tanzu.vmware.com/workload-type: web
+    pipeline-tag: customer-profile-test-pipeline
     app.kubernetes.io/component: run
     carto.run/workload-name: customer-profile
 spec:
