--- a/config/bridget/customer-profile/apiDescriptor.yml
+++ b/config/bridget/customer-profile/apiDescriptor.yml
@@ -8,14 +8,12 @@ metadata:
     apis.apps.tanzu.vmware.com/register-api: "true"
     app.kubernetes.io/part-of: customer-profile
     apps.tanzu.vmware.com/has-tests: "true"
-    apps.tanzu.vmware.com/language: java
     apps.tanzu.vmware.com/workload-type: web
-    pipeline-tag: customer-profile-test-pipeline
     app.kubernetes.io/component: run
     carto.run/workload-name: customer-profile
 spec:
   type: openapi
-  description: awesomest
+  description: yeet
   system: maelarge
   owner: maelarge
   location:
